// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DesktopDocumentTechnicalTableResults component Renders correctly when multiple documents are present for asset types 1`] = `
<body>
  <div>
    <div>
      <div>
        <table
          class="MuiTable-root Table-root-210 Table-rowNoColor-214"
        >
          <thead
            class="MuiTableHead-root ColorPair-root-222 ColorPair-pearl-224"
          >
            <tr
              class="MuiTableRow-root DocumentTechnicalTableResults-headerRow-194 MuiTableRow-head"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              >
                MC: documentLibrary.headers.product
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head DocumentTechnicalTableResults-assetTypeCell-196"
                scope="col"
              >
                asset-code
                <div
                  class="Tooltip-root-262"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root IconButton-root-274 iconButton IconButton-42-273 IconButton-text-276"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root DocumentTechnicalTableResults-tooltipIcon-197"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head DocumentTechnicalTableResults-allFilesHeader-207"
                scope="col"
              >
                <span
                  class="DocumentTechnicalTableResults-allFilesHeaderWrapper-208"
                >
                  <svg
                    class="DocumentTechnicalTableResults-allFilesIcon-209"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 20v-2H5v2Zm0-10h-4V4H9v6H5l7 7Z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    MC: documentLibrary.headers.allFiles
                  </span>
                </span>
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                product name
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body DocumentTechnicalTableResults-alignCenter-199"
              >
                <svg
                  class="DocumentTechnicalTableResults-noDocumentIcon-204"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h16v16H0z"
                    fill="none"
                  />
                  <path
                    d="m12.6 11.15-1.4 1.45L8 9.4l-3.15 3.2-1.4-1.45L6.6 8 3.45 4.8l1.4-1.4L8 6.6l3.2-3.2 1.4 1.4L9.45 8Z"
                    fill="currentColor"
                  />
                </svg>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body DocumentTechnicalTableResults-alignCenter-199"
              >
                <span
                  class=""
                >
                  <div
                    class="MuiFormControl-root Checkbox-root-283"
                  >
                    <label
                      class="MuiFormControlLabel-root"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-285 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <input
                            aria-label="MC: documentLibrary.download product1"
                            class="PrivateSwitchBase-input-288"
                            data-indeterminate="false"
                            name="product-base-code-0"
                            type="checkbox"
                            value=""
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                      <span
                        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                      />
                    </label>
                  </div>
                </span>
              </td>
            </tr>
            <tr
              class="MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                product3
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body DocumentTechnicalTableResults-alignCenter-199"
              >
                <svg
                  class="DocumentTechnicalTableResults-noDocumentIcon-204"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h16v16H0z"
                    fill="none"
                  />
                  <path
                    d="m12.6 11.15-1.4 1.45L8 9.4l-3.15 3.2-1.4-1.45L6.6 8 3.45 4.8l1.4-1.4L8 6.6l3.2-3.2 1.4 1.4L9.45 8Z"
                    fill="currentColor"
                  />
                </svg>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body DocumentTechnicalTableResults-alignCenter-199"
              />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</body>
`;

exports[`DesktopDocumentTechnicalTableResults component Renders correctly when not all products have all asset types 1`] = `
<body>
  <div>
    <div>
      <div>
        <table
          class="MuiTable-root Table-root-114 Table-rowNoColor-118"
        >
          <thead
            class="MuiTableHead-root ColorPair-root-126 ColorPair-pearl-128"
          >
            <tr
              class="MuiTableRow-root DocumentTechnicalTableResults-headerRow-98 MuiTableRow-head"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              >
                MC: documentLibrary.headers.product
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head DocumentTechnicalTableResults-assetTypeCell-100"
                scope="col"
              >
                asset-code
                <div
                  class="Tooltip-root-166"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root IconButton-root-178 iconButton IconButton-42-177 IconButton-text-180"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root DocumentTechnicalTableResults-tooltipIcon-101"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head DocumentTechnicalTableResults-assetTypeCell-100"
                scope="col"
              >
                asset-code
                <div
                  class="Tooltip-root-166"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root IconButton-root-178 iconButton IconButton-42-177 IconButton-text-180"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root DocumentTechnicalTableResults-tooltipIcon-101"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head DocumentTechnicalTableResults-allFilesHeader-111"
                scope="col"
              >
                <span
                  class="DocumentTechnicalTableResults-allFilesHeaderWrapper-112"
                >
                  <svg
                    class="DocumentTechnicalTableResults-allFilesIcon-113"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 20v-2H5v2Zm0-10h-4V4H9v6H5l7 7Z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    MC: documentLibrary.headers.allFiles
                  </span>
                </span>
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                product name
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body DocumentTechnicalTableResults-alignCenter-103"
              >
                <a
                  data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost:9000/document.pdf\\"}"
                  download="pim document title"
                  href="http://localhost:9000/document.pdf"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    class="DocumentTechnicalTableResults-formatIcon-102 format-icon"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M28 2H10l-8 8v18a2.006 2.006 0 0 0 2 2h24a2.006 2.006 0 0 0 2-2V4a2.006 2.006 0 0 0-2-2Zm-4.12 8.54-6.96 6.96-2.41-2.41 6.96-6.96L18.34 5l8.65.01.01 8.65Z"
                    />
                  </svg>
                </a>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body DocumentTechnicalTableResults-alignCenter-103"
              >
                <a
                  data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost:9000/document.pdf\\"}"
                  download="pim document title"
                  href="http://localhost:9000/document.pdf"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    class="DocumentTechnicalTableResults-formatIcon-102 format-icon"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M28 2H10l-8 8v18a2.006 2.006 0 0 0 2 2h24a2.006 2.006 0 0 0 2-2V4a2.006 2.006 0 0 0-2-2Zm-4.12 8.54-6.96 6.96-2.41-2.41 6.96-6.96L18.34 5l8.65.01.01 8.65Z"
                    />
                  </svg>
                </a>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body DocumentTechnicalTableResults-alignCenter-103"
              >
                <span
                  class=""
                >
                  <div
                    class="MuiFormControl-root Checkbox-root-187"
                  >
                    <label
                      class="MuiFormControlLabel-root"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-189 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <input
                            aria-label="MC: documentLibrary.download product1"
                            class="PrivateSwitchBase-input-192"
                            data-indeterminate="false"
                            name="product-base-code-0"
                            type="checkbox"
                            value=""
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                      <span
                        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                      />
                    </label>
                  </div>
                </span>
              </td>
            </tr>
            <tr
              class="MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                product3
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body DocumentTechnicalTableResults-alignCenter-103"
              >
                <svg
                  class="DocumentTechnicalTableResults-noDocumentIcon-108"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h16v16H0z"
                    fill="none"
                  />
                  <path
                    d="m12.6 11.15-1.4 1.45L8 9.4l-3.15 3.2-1.4-1.45L6.6 8 3.45 4.8l1.4-1.4L8 6.6l3.2-3.2 1.4 1.4L9.45 8Z"
                    fill="currentColor"
                  />
                </svg>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body DocumentTechnicalTableResults-alignCenter-103"
              >
                <svg
                  class="DocumentTechnicalTableResults-noDocumentIcon-108"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h16v16H0z"
                    fill="none"
                  />
                  <path
                    d="m12.6 11.15-1.4 1.45L8 9.4l-3.15 3.2-1.4-1.45L6.6 8 3.45 4.8l1.4-1.4L8 6.6l3.2-3.2 1.4 1.4L9.45 8Z"
                    fill="currentColor"
                  />
                </svg>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body DocumentTechnicalTableResults-alignCenter-103"
              />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</body>
`;

exports[`DesktopDocumentTechnicalTableResults component Renders correctly when only single documents are present for asset types 1`] = `
<body>
  <div>
    <div>
      <div>
        <table
          class="MuiTable-root Table-root-18 Table-rowNoColor-22"
        >
          <thead
            class="MuiTableHead-root ColorPair-root-30 ColorPair-pearl-32"
          >
            <tr
              class="MuiTableRow-root DocumentTechnicalTableResults-headerRow-2 MuiTableRow-head"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              >
                MC: documentLibrary.headers.product
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head DocumentTechnicalTableResults-assetTypeCell-4"
                scope="col"
              >
                asset-code
                <div
                  class="Tooltip-root-70"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root IconButton-root-82 iconButton IconButton-42-81 IconButton-text-84"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root DocumentTechnicalTableResults-tooltipIcon-5"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head DocumentTechnicalTableResults-allFilesHeader-15"
                scope="col"
              >
                <span
                  class="DocumentTechnicalTableResults-allFilesHeaderWrapper-16"
                >
                  <svg
                    class="DocumentTechnicalTableResults-allFilesIcon-17"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 20v-2H5v2Zm0-10h-4V4H9v6H5l7 7Z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    MC: documentLibrary.headers.allFiles
                  </span>
                </span>
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                product name
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body DocumentTechnicalTableResults-alignCenter-7"
              >
                <svg
                  class="DocumentTechnicalTableResults-noDocumentIcon-12"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h16v16H0z"
                    fill="none"
                  />
                  <path
                    d="m12.6 11.15-1.4 1.45L8 9.4l-3.15 3.2-1.4-1.45L6.6 8 3.45 4.8l1.4-1.4L8 6.6l3.2-3.2 1.4 1.4L9.45 8Z"
                    fill="currentColor"
                  />
                </svg>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body DocumentTechnicalTableResults-alignCenter-7"
              >
                <span
                  class=""
                >
                  <div
                    class="MuiFormControl-root Checkbox-root-91"
                  >
                    <label
                      class="MuiFormControlLabel-root"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-93 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <input
                            aria-label="MC: documentLibrary.download product1"
                            class="PrivateSwitchBase-input-96"
                            data-indeterminate="false"
                            name="product-base-code-0"
                            type="checkbox"
                            value=""
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                      <span
                        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                      />
                    </label>
                  </div>
                </span>
              </td>
            </tr>
            <tr
              class="MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                product3
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body DocumentTechnicalTableResults-alignCenter-7"
              >
                <svg
                  class="DocumentTechnicalTableResults-noDocumentIcon-12"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h16v16H0z"
                    fill="none"
                  />
                  <path
                    d="m12.6 11.15-1.4 1.45L8 9.4l-3.15 3.2-1.4-1.45L6.6 8 3.45 4.8l1.4-1.4L8 6.6l3.2-3.2 1.4 1.4L9.45 8Z"
                    fill="currentColor"
                  />
                </svg>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body DocumentTechnicalTableResults-alignCenter-7"
              />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</body>
`;
